spec/e2e/type/nil.lit
nil(); # error: [line 1] Can only call functions and types.
